get_indexes returns IndexInfo instead of IndexId
